My_workspace/host/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
20:08:50 **** Rebuild of configuration Debug for project 000TestProject ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c: In function 'main':
..\main.c:7:1: error: expected ';' before '}' token
 }
 ^
20:08:55 **** Incremental Build of configuration Debug for project 000TestProject ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -o 000TestProject.exe main.o 
